src/main/java/com/example/antlr/mysql/MySqlParser.java
// Generated from /Users/jiangdadong/CodeBuddy/antlr-demo01/src/main/antlr4/mysql/MySqlParser.g4 by ANTLR 4.13.1
package com.example.antlr.mysql;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MySqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, FROM=2, WHERE=3, AND=4, OR=5, NOT=6, INSERT=7, INTO=8, VALUES=9, 
		UPDATE=10, SET=11, DELETE=12, CREATE=13, TABLE=14, DROP=15, ALTER=16, 
		ADD=17, COLUMN=18, INDEX=19, PRIMARY=20, KEY=21, FOREIGN=22, REFERENCES=23, 
		UNIQUE=24, NULL_=25, DEFAULT=26, AUTO_INCREMENT=27, IF_=28, EXISTS=29, 
		DATABASE=30, USE_=31, SHOW=32, DATABASES=33, TABLES=34, DESCRIBE=35, DESC=36, 
		ASC=37, ORDER=38, BY=39, GROUP=40, HAVING=41, LIMIT=42, OFFSET=43, JOIN=44, 
		INNER=45, LEFT=46, RIGHT=47, OUTER=48, CROSS=49, ON=50, AS=51, IN=52, 
		BETWEEN=53, LIKE=54, IS=55, DISTINCT=56, UNION=57, ALL=58, CASE=59, WHEN=60, 
		THEN=61, ELSE=62, END=63, COUNT=64, SUM=65, AVG=66, MIN=67, MAX=68, CAST=69, 
		REPLACE=70, TRUNCATE=71, COMMENT=72, ENGINE=73, CHARSET=74, CHARACTER=75, 
		COLLATE=76, UNSIGNED=77, SIGNED=78, TINYINT=79, SMALLINT=80, MEDIUMINT=81, 
		INT=82, INTEGER=83, BIGINT=84, FLOAT=85, DOUBLE=86, DECIMAL=87, NUMERIC=88, 
		CHAR=89, VARCHAR=90, TEXT=91, TINYTEXT=92, MEDIUMTEXT=93, LONGTEXT=94, 
		BLOB=95, DATE=96, DATETIME=97, TIMESTAMP=98, TIME=99, BOOLEAN=100, BOOL=101, 
		ENUM=102, TRUE=103, FALSE=104, STAR=105, COMMA=106, DOT=107, LPAREN=108, 
		RPAREN=109, SEMICOLON=110, EQ=111, NEQ=112, LT=113, GT=114, LTE=115, GTE=116, 
		PLUS=117, MINUS=118, DIVIDE=119, MOD=120, BACKTICK=121, INTEGER_LITERAL=122, 
		DECIMAL_LITERAL=123, STRING_LITERAL=124, BACKTICK_QUOTED_ID=125, IDENTIFIER=126, 
		WS=127, LINE_COMMENT=128, BLOCK_COMMENT=129;
	public static final int
		RULE_root = 0, RULE_sqlStatements = 1, RULE_sqlStatement = 2, RULE_ddlStatement = 3, 
		RULE_createDatabase = 4, RULE_dropDatabase = 5, RULE_createTable = 6, 
		RULE_dropTable = 7, RULE_alterTable = 8, RULE_alterTableAction = 9, RULE_truncateTable = 10, 
		RULE_createIndex = 11, RULE_dropIndex = 12, RULE_dmlStatement = 13, RULE_selectStatement = 14, 
		RULE_insertStatement = 15, RULE_updateStatement = 16, RULE_deleteStatement = 17, 
		RULE_showStatement = 18, RULE_useStatement = 19, RULE_describeStatement = 20, 
		RULE_selectElements = 21, RULE_selectElement = 22, RULE_tableSource = 23, 
		RULE_joinClause = 24, RULE_joinType = 25, RULE_whereClause = 26, RULE_groupByClause = 27, 
		RULE_havingClause = 28, RULE_orderByClause = 29, RULE_orderByElement = 30, 
		RULE_limitClause = 31, RULE_expression = 32, RULE_comparisonOperator = 33, 
		RULE_caseExpression = 34, RULE_functionCall = 35, RULE_functionName = 36, 
		RULE_columnDefinition = 37, RULE_dataType = 38, RULE_columnConstraint = 39, 
		RULE_tableConstraint = 40, RULE_tableOptions = 41, RULE_tableOption = 42, 
		RULE_updateAssignment = 43, RULE_columnNameList = 44, RULE_indexColumnList = 45, 
		RULE_expressionList = 46, RULE_columnRef = 47, RULE_tableName = 48, RULE_databaseName = 49, 
		RULE_columnName = 50, RULE_indexName = 51, RULE_alias = 52, RULE_identifier = 53, 
		RULE_literal = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "sqlStatements", "sqlStatement", "ddlStatement", "createDatabase", 
			"dropDatabase", "createTable", "dropTable", "alterTable", "alterTableAction", 
			"truncateTable", "createIndex", "dropIndex", "dmlStatement", "selectStatement", 
			"insertStatement", "updateStatement", "deleteStatement", "showStatement", 
			"useStatement", "describeStatement", "selectElements", "selectElement", 
			"tableSource", "joinClause", "joinType", "whereClause", "groupByClause", 
			"havingClause", "orderByClause", "orderByElement", "limitClause", "expression", 
			"comparisonOperator", "caseExpression", "functionCall", "functionName", 
			"columnDefinition", "dataType", "columnConstraint", "tableConstraint", 
			"tableOptions", "tableOption", "updateAssignment", "columnNameList", 
			"indexColumnList", "expressionList", "columnRef", "tableName", "databaseName", 
			"columnName", "indexName", "alias", "identifier", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'*'", "','", "'.'", 
			"'('", "')'", "';'", "'='", null, "'<'", "'>'", "'<='", "'>='", "'+'", 
			"'-'", "'/'", "'%'", "'`'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SELECT", "FROM", "WHERE", "AND", "OR", "NOT", "INSERT", "INTO", 
			"VALUES", "UPDATE", "SET", "DELETE", "CREATE", "TABLE", "DROP", "ALTER", 
			"ADD", "COLUMN", "INDEX", "PRIMARY", "KEY", "FOREIGN", "REFERENCES", 
			"UNIQUE", "NULL_", "DEFAULT", "AUTO_INCREMENT", "IF_", "EXISTS", "DATABASE", 
			"USE_", "SHOW", "DATABASES", "TABLES", "DESCRIBE", "DESC", "ASC", "ORDER", 
			"BY", "GROUP", "HAVING", "LIMIT", "OFFSET", "JOIN", "INNER", "LEFT", 
			"RIGHT", "OUTER", "CROSS", "ON", "AS", "IN", "BETWEEN", "LIKE", "IS", 
			"DISTINCT", "UNION", "ALL", "CASE", "WHEN", "THEN", "ELSE", "END", "COUNT", 
			"SUM", "AVG", "MIN", "MAX", "CAST", "REPLACE", "TRUNCATE", "COMMENT", 
			"ENGINE", "CHARSET", "CHARACTER", "COLLATE", "UNSIGNED", "SIGNED", "TINYINT", 
			"SMALLINT", "MEDIUMINT", "INT", "INTEGER", "BIGINT", "FLOAT", "DOUBLE", 
			"DECIMAL", "NUMERIC", "CHAR", "VARCHAR", "TEXT", "TINYTEXT", "MEDIUMTEXT", 
			"LONGTEXT", "BLOB", "DATE", "DATETIME", "TIMESTAMP", "TIME", "BOOLEAN", 
			"BOOL", "ENUM", "TRUE", "FALSE", "STAR", "COMMA", "DOT", "LPAREN", "RPAREN", 
			"SEMICOLON", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "PLUS", "MINUS", 
			"DIVIDE", "MOD", "BACKTICK", "INTEGER_LITERAL", "DECIMAL_LITERAL", "STRING_LITERAL", 
			"BACKTICK_QUOTED_ID", "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MySqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MySqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public SqlStatementsContext sqlStatements() {
			return getRuleContext(SqlStatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MySqlParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlParserVisitor ) return ((MySqlParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			sqlStatements();
			setState(111);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementsContext extends ParserRuleContext {
		public List<SqlStatementContext> sqlStatement() {
			return getRuleContexts(SqlStatementContext.class);
		}
		public SqlStatementContext sqlStatement(int i) {
			return getRuleContext(SqlStatementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(MySqlParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(MySqlParser.SEMICOLON, i);
		}
		public SqlStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).enterSqlStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).exitSqlStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlParserVisitor ) return ((MySqlParserVisitor<? extends T>)visitor).visitSqlStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementsContext sqlStatements() throws RecognitionException {
		SqlStatementsContext _localctx = new SqlStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 109521777794L) != 0) || _la==TRUNCATE) {
				{
				{
				setState(113);
				sqlStatement();
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(114);
					match(SEMICOLON);
					}
				}

				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementContext extends ParserRuleContext {
		public DdlStatementContext ddlStatement() {
			return getRuleContext(DdlStatementContext.class,0);
		}
		public DmlStatementContext dmlStatement() {
			return getRuleContext(DmlStatementContext.class,0);
		}
		public ShowStatementContext showStatement() {
			return getRuleContext(ShowStatementContext.class,0);
		}
		public UseStatementContext useStatement() {
			return getRuleContext(UseStatementContext.class,0);
		}
		public DescribeStatementContext describeStatement() {
			return getRuleContext(DescribeStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).exitSqlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlParserVisitor ) return ((MySqlParserVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sqlStatement);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
			case DROP:
			case ALTER:
			case TRUNCATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				ddlStatement();
				}
				break;
			case SELECT:
			case INSERT:
			case UPDATE:
			case DELETE:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				dmlStatement();
				}
				break;
			case SHOW:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				showStatement();
				}
				break;
			case USE_:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				useStatement();
				}
				break;
			case DESCRIBE:
			case DESC:
				enterOuterAlt(_localctx, 5);
				{
				setState(126);
				describeStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DdlStatementContext extends ParserRuleContext {
		public CreateDatabaseContext createDatabase() {
			return getRuleContext(CreateDatabaseContext.class,0);
		}
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public DropDatabaseContext dropDatabase() {
			return getRuleContext(DropDatabaseContext.class,0);
		}
		public DropTableContext dropTable() {
			return getRuleContext(DropTableContext.class,0);
		}
		public AlterTableContext alterTable() {
			return getRuleContext(AlterTableContext.class,0);
		}
		public TruncateTableContext truncateTable() {
			return getRuleContext(TruncateTableContext.class,0);
		}
		public CreateIndexContext createIndex() {
			return getRuleContext(CreateIndexContext.class,0);
		}
		public DropIndexContext dropIndex() {
			return getRuleContext(DropIndexContext.class,0);
		}
		public DdlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).enterDdlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).exitDdlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlParserVisitor ) return ((MySqlParserVisitor<? extends T>)visitor).visitDdlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DdlStatementContext ddlStatement() throws RecognitionException {
		DdlStatementContext _localctx = new DdlStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ddlStatement);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				createDatabase();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				createTable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				dropDatabase();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				dropTable();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(133);
				alterTable();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(134);
				truncateTable();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(135);
				createIndex();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(136);
				dropIndex();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateDatabaseContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(MySqlParser.CREATE, 0); }
		public TerminalNode DATABASE() { return getToken(MySqlParser.DATABASE, 0); }
		public DatabaseNameContext databaseName() {
			return getRuleContext(DatabaseNameContext.class,0);
		}
		public TerminalNode IF_() { return getToken(MySqlParser.IF_, 0); }
		public TerminalNode NOT() { return getToken(MySqlParser.NOT, 0); }
		public TerminalNode EXISTS() { return getToken(MySqlParser.EXISTS, 0); }
		public CreateDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).enterCreateDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).exitCreateDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlParserVisitor ) return ((MySqlParserVisitor<? extends T>)visitor).visitCreateDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateDatabaseContext createDatabase() throws RecognitionException {
		CreateDatabaseContext _localctx = new CreateDatabaseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createDatabase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(CREATE);
			setState(140);
			match(DATABASE);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF_) {
				{
				setState(141);
				match(IF_);
				setState(142);
				match(NOT);
				setState(143);
				match(EXISTS);
				}
			}

			setState(146);
			databaseName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DropDatabaseContext extends ParserRuleContext {
		public TerminalNode DROP() { return getToken(MySqlParser.DROP, 0); }
		public TerminalNode DATABASE() { return getToken(MySqlParser.DATABASE, 0); }
		public DatabaseNameContext databaseName() {
			return getRuleContext(DatabaseNameContext.class,0);
		}
		public TerminalNode IF_() { return getToken(MySqlParser.IF_, 0); }
		public TerminalNode EXISTS() { return getToken(MySqlParser.EXISTS, 0); }
		public DropDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).enterDropDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySqlParserListener ) ((MySqlParserListener)listener).exitDropDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlParserVisitor ) return ((MySqlParserVisitor<? extends T>)visitor).visitDropDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DropDatabaseContext dropDatabase() throws RecognitionException {
		DropDatabaseContext _localctx = new DropDatabaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dropDatabase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(DROP);
			setState(149);
			match(DATABASE);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF_) {
				{
				setState(150);
				match(IF_);
				setState(151);
				match(EXISTS);
				}
			}

			setState(154);
			databaseName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
